--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>iparis_vue</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   
+    <title>I Pazi Shop</title>
+    <!-- Compiled and minified CSS -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
   </body>
 </html>
